force-app/main/default/objects/Medical_Conditions__c/Medical_Conditions__c.object-meta.xml
<CustomObject>
    <label>Medical Condition</label>
    <nameField>
        <displayFormat>MC-{0}</displayFormat>
        <label>Medical Conditions ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>