force-app/main/default/objects/Medical_Conditions__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <label>Animal ID</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Medical Conditions</relationshipLabel>
    <relationshipName>Medical_Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>