force-app/main/default/objects/Medical_Conditions__c/fields/Being_Treated__c.field-meta.xml
<CustomField>
    <fullName>Being_Treated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Being Treated</label>
    <type>Checkbox</type>
</CustomField>