force-app/main/default/objects/Medical_Conditions__c/fields/Date_Diagnosed__c.field-meta.xml
<CustomField>
    <fullName>Date_Diagnosed__c</fullName>
    <label>Date Diagnosed</label>
    <required>true</required>
    <type>Date</type>
</CustomField>