force-app/main/default/objects/Medical_Conditions__c/fields/Discharge_Inclusion__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Inclusion__c</fullName>
    <formula>CASE(Medical_Condition__c, &quot;Babesia&quot;, &quot;Yes&quot;,
&quot;Canine Distemper&quot;,&quot;Yes&quot;, &quot;Canine Parvovirus&quot;,&quot;Yes&quot;, &quot;Demodex&quot;,&quot;Yes&quot;, &quot;Dental Disease&quot;,&quot;Yes&quot;, &quot;Dental Fracture&quot;,&quot;Yes&quot;, &quot;Ehrlichia&quot;,&quot;Yes&quot;, &quot;Feline Immunodeficiency Virus&quot;,&quot;Yes&quot;, &quot;Feline Leukemia&quot;,&quot;Yes&quot;, &quot;Giardia&quot;,&quot;Yes&quot;, &quot;Hookworms&quot;,&quot;Yes&quot;, &quot;Mass&quot;,&quot;Yes&quot;, &quot;Roundworms&quot;,&quot;Yes&quot;, &quot;Whipworms&quot;,&quot;Yes&quot;,TEXT(Include_in_discharge__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discharge Inclusion</label>
    <type>Text</type>
</CustomField>