force-app/main/default/objects/Medical_Conditions__c/fields/Include_in_discharge__c.field-meta.xml
<CustomField>
    <fullName>Include_in_discharge__c</fullName>
    <label>Include in discharge?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>