force-app/main/default/objects/Medical_Conditions__c/fields/Medical_Condition__c.field-meta.xml
<CustomField>
    <fullName>Medical_Condition__c</fullName>
    <label>Medical Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allergy</fullName>
            </value>
            <value>
                <fullName>Anaplasma</fullName>
            </value>
            <value>
                <fullName>Anemia</fullName>
            </value>
            <value>
                <fullName>Angel Wing</fullName>
            </value>
            <value>
                <fullName>Appears Healthy on Forensic Exam</fullName>
            </value>
            <value>
                <fullName>Avian Influenza</fullName>
            </value>
            <value>
                <fullName>Avian Pox</fullName>
            </value>
            <value>
                <fullName>Babesia</fullName>
            </value>
            <value>
                <fullName>Beak (Clipped)</fullName>
            </value>
            <value>
                <fullName>Beak (Malformed)</fullName>
            </value>
            <value>
                <fullName>Beak (Overgrown)</fullName>
            </value>
            <value>
                <fullName>Behavior</fullName>
            </value>
            <value>
                <fullName>Blunt force trauma</fullName>
            </value>
            <value>
                <fullName>Bumblefoot (Pododermatitis)</fullName>
            </value>
            <value>
                <fullName>Canine Bordetella</fullName>
            </value>
            <value>
                <fullName>Canine Distemper</fullName>
            </value>
            <value>
                <fullName>Canine Mycoplasma</fullName>
            </value>
            <value>
                <fullName>Canine Parvo</fullName>
            </value>
            <value>
                <fullName>Cardiac disease</fullName>
            </value>
            <value>
                <fullName>Coccidia</fullName>
            </value>
            <value>
                <fullName>Crop Stasis</fullName>
            </value>
            <value>
                <fullName>Cryptorchid</fullName>
            </value>
            <value>
                <fullName>Dehydration</fullName>
            </value>
            <value>
                <fullName>Demodex</fullName>
            </value>
            <value>
                <fullName>Dental Disease</fullName>
            </value>
            <value>
                <fullName>Dental Fracture</fullName>
            </value>
            <value>
                <fullName>Dermatitis</fullName>
            </value>
            <value>
                <fullName>Dermatophyte</fullName>
            </value>
            <value>
                <fullName>Egg Bound</fullName>
            </value>
            <value>
                <fullName>Ehrlichia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>